lib/src/compiler/tests/testdata/errors/57.out
error[E106]: unknown field or method `ignored`
 --> line:4:17
  |
4 |     test_proto2.ignored
  |                 ^^^^^^^ this field or method doesn't exist
  |